SalesforceProject2/src/objects/Question__c.object
<CustomObject>
    <fields>
        <fullName>Original_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates the Response to this question was authored for this question, and this is the first usage of this Response.</inlineHelpText>
        <label>Original Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Override_Warning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This indicates that this response was used more than once in the document.</description>
        <inlineHelpText>This indicates that this response was used more than once in the document.</inlineHelpText>
        <label>Override Warning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <inlineHelpText>The question as asked in the RFP or other document.</inlineHelpText>
        <label>Question</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RFP__c</fullName>
        <inlineHelpText>RFx, Document, or Question Set where this question originated.</inlineHelpText>
        <label>RFP</label>
        <referenceTo>RFP__c</referenceTo>
        <relationshipLabel>Questions</relationshipLabel>
        <relationshipName>Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Response_Status__c</fullName>
        <formula>TEXT(Response__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <inlineHelpText>The selected or newly created Response for this Question.</inlineHelpText>
        <label>Response</label>
        <referenceTo>Response__c</referenceTo>
        <relationshipLabel>Questions</relationshipLabel>
        <relationshipName>Questions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <inlineHelpText>How the answer to this question was found - by searching questions or responses.</inlineHelpText>
        <label>Search Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Questions</fullName>
                </value>
                <value>
                    <fullName>Responses</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>diz_date2__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_date2__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>diz_date__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_date__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>diz_number__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_number__c</label>
        <precision>12</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>diz_phone__c</fullName>
        <label>diz_phone__c</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>diz_text__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_text__c</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>diz_url__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_url__c</label>
        <type>Url</type>
    </fields>
    <label>Question</label>
    <nameField>
        <displayFormat>Q-{0000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>